# django-twc-package

./: .envrc  .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  RELEASING.md  copier.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: examples.yml  test.yml
examples/: calver_inc.yml  calver_month.yml  default.yml
examples/calver_inc/: .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  RELEASING.md  noxfile.py  pyproject.toml
examples/calver_inc/.copier/: package.yml
examples/calver_inc/.github/workflows/: release.yml  test.yml
examples/calver_inc/docs/: conf.py  index.md
examples/calver_inc/src/calver_inc1_project/: __init__.py  conf.py
examples/calver_inc/tests/: conftest.py  test_conf.py  test_version.py
examples/calver_inc/tests/plugins/: dj_settings.py
examples/calver_month/: CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  RELEASING.md  noxfile.py  pyproject.toml
examples/calver_month/.copier/: package.yml
examples/calver_month/.github/workflows/: release.yml  test.yml
examples/calver_month/docs/: conf.py  index.md
examples/calver_month/src/calver_mminc1_project/: __init__.py  conf.py
examples/calver_month/tests/: conftest.py  test_conf.py  test_version.py
examples/default/: .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  README.md  RELEASING.md  noxfile.py  pyproject.toml
examples/default/.copier/: package.yml
examples/default/.github/workflows/: release.yml  test.yml
examples/default/docs/: conf.py  index.md
examples/default/src/semver_project/: __init__.py  conf.py
examples/default/tests/: conftest.py  test_conf.py  test_version.py
extensions/: context.py
src/django_twc_package/: .pre-commit-config.yaml.jinja  .readthedocs.yaml.jinja  AUTHORS.md.jinja  CHANGELOG.md.jinja  CONTRIBUTING.md.jinja  Justfile  Justfile.jinja  LICENSE.jinja  README.md.jinja  RELEASING.md.jinja  noxfile.py.jinja  pyproject.toml.jinja
src/django_twc_package/.github/workflows/: release.yml.jinja  test.yml.jinja
src/django_twc_package/docs/: conf.py.jinja  index.md.jinja
src/django_twc_package/src/{{ module_name }}/: conf.py.jinja
src/django_twc_package/tests/: conftest.py.jinja  test_conf.py.jinja
src/django_twc_package/tests/plugins/: dj_settings.py.jinja
tests/: test_extensions.py  test_version.py
